--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/>
 	</parent>
 	<groupId>be.pekket</groupId>
-	<artifactId>houseScraper</artifactId>
+	<artifactId>housescraper</artifactId>
 	<version>0.0.1</version>
-	<name>houseScraper</name>
+	<name>House Scraper</name>
 	<description>House scraping project by Jan</description>
 
 	<properties>
