--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <version>${com.spotify.dockerfile-maven-plugin}</version>
                 <configuration>
-                    <repository>pekket-house-app</repository>
+                    <repository>house-app</repository>
                     <buildArgs>
                         <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
