--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:1.13
 
 COPY ./nginx/conf.d /etc/nginx/conf.d
-COPY react /var/www
+COPY ./react/build /var/www
 
 CMD nginx -g 'daemon off;'
